<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.fushuwei</groupId>
    <artifactId>sca-skeleton</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>SCA Skeleton</name>
    <description>SCA Skeleton Project</description>

    <modules>
        <module>sca-skeleton-backend</module>
    </modules>

    <properties>
        <!-- 项目统一版本 -->
        <revision>1.0.0</revision>

        <!-- Java 版本配置 -->
        <java.version>25</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>

        <!-- 项目编码配置 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- 第三方依赖版本 -->
        <spring-boot.version>4.0.6</spring-boot.version>
        <lombok.version>1.18.46</lombok.version>
        <mapstruct.version>1.6.3</mapstruct.version>

        <!-- Maven 插件版本 -->
        <flatten-maven-plugin.version>1.7.3</flatten-maven-plugin.version>
        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
    </properties>

    <build>
        <plugins>
            <!-- Flatten Maven Plugin 版本变量扁平化插件，用于生成可发布到 Maven 仓库的标准 POM -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                    <updatePomFile>true</updatePomFile>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>

        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <!-- release 环境执行 flatten execution，将 ${revision} 解析为固定版本号，并生成标准 POM -->
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>flatten-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>flatten</id>
                                <phase>process-resources</phase>
                                <goals>
                                    <goal>flatten</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
